# ARC-AGI-1

./: .gitignore  AGENT.md  README.md  pyproject.toml
conf/: train_baseline.yaml  train_task_conditioned.yaml
docs/: decisions.md  experiments.md  model-improvement-phases.md
guides/: arc-data-model.md  experiment-workflow.md
scripts/: eval_baseline.py  eval_neural_baseline.py  list_experiments.py  run_experiment.py  show_task.py  train_neural_baseline.py  train_task_conditioned_baseline.py
src/arc_agi_1/: __init__.py  baselines.py  data.py  dataset.py  experiments.py  model.py  scoring.py  training.py
tests/: test_dataset.py  test_experiments.py  test_model.py  test_scoring.py
